# pulse.ai

./: .gitignore  README.md  pyproject.toml
src/observability/: case_runner.py  crew.py  harness.py  main.py  pipeline.py  suite_runner.py
src/observability/config/: agents.yaml  tasks.yaml
src/observability/tools/: __init__.py  custom_tool.py
tests/: storage_starvation.json
tests/cases/: 01_storage_starvation_a.json  02_storage_starvation_b.json  03_storage_open_latency.json  04_storage_cache_collapse.json  05_data_pipeline_loader.json  06_data_pipeline_batch_prep.json  07_data_pipeline_queue_depth.json  08_data_pipeline_shuffle.json  09_network_rdma_retries.json  10_network_bandwidth_drop.json  11_network_packet_loss.json  12_network_remote_dataset.json  13_gpu_compute_hot.json  14_gpu_compute_memory_bound.json  15_gpu_compute_kernel_regression.json  16_training_instability_failures.json  17_training_instability_batch_errors.json  18_training_instability_optimizer.json  19_inconclusive_near_baseline.json  20_inconclusive_mixed_signals.json
